--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
   - "3.8"
 install:
   - pip install -r requirements.txt
+  - pip install -r test_requirements.txt
 script:
-  - pytest
+  - coverage run -m pytest
