--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ install:
   - pip install -r test_requirements.txt
 script:
   - coverage run -m pytest
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
